Prevent page from jumping to the side when scrollbar is added

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,10 @@
     color: white;
 }
 
+html {
+    width: 100vw;
+}
+
 body {
     background-color: #1E1E2F;
 }
